# interpter-lambda

./: README.md  interpter-lambda.cabal  note.org
src/: Main.hs
