name:                interpter-lambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vtheno/interpter-lambda#readme
category:            Lambda
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable interpter-lambda
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec
